# tditracer

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
minimal-tdi/: Makefile  README  ktdim.c  ktdim.h  libtdi.cpp  libtdim.cpp  membench.c  tdi.cpp  tdi.h  tdim.cpp  tdim.h
minimal-tdi-tests/: Makefile  affinity.c  default_buffers.cpp  do.sh  doall.sh  doarm.sh  domips.sh  dopuma6arm.sh  dopuma6atom.sh  fincore.c  forkexecve.c  ktdim.c  libcode.c  libinterp_socketio.c  membench.cpp  memlock.c  memreport.sh  memspeed.cpp  procdiskstats.cpp  procnetdev.cpp  procselfstat.cpp  procsmaps.cpp  procstat.cpp  runsim001.sh  runsim002.sh  runsim003-vbox.sh  runsim003.sh  simclient.cpp  simserver.cpp  sleeper.cpp  smemcap.c
minimal-tdi/ktdim/: Makefile
minimal-tdi/ktdim/kernel-module/: Makefile  ktdim.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/arch/arm/kernel/: irq.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/fs/: exec.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/include/linux/: syscalls.h
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/kernel/: exit.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/kernel/sched/: core.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/mm/: mmap.c  mremap.c  page_alloc.c  slub.c  vmalloc.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.14/net/core/: skbuff.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/arch/x86/kernel/: irq.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/fs/: exec.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/include/linux/: slab.h  syscalls.h
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/kernel/: Makefile  exit.c  fork.c  ktdim.c  kthread.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/kernel/sched/: core.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/mm/: mmap.c  mremap.c  page_alloc.c  slub.c  vmalloc.c
minimal-tdi/ktdim/kernel-overlay/linux-3.12.17/net/core/: skbuff.c
minimal-tdi/ktdim/kernel-overlay/linux-3.14.4/fs/: exec.c
minimal-tdi/ktdim/kernel-overlay/linux-3.14.4/include/linux/: slab.h
minimal-tdi/ktdim/kernel-overlay/linux-3.14.4/kernel/: fork.c  ktdim.c
minimal-tdi/ktdim/kernel-overlay/linux-3.14.4/kernel/sched/: core.c
minimal-tdi/ktdim/kernel-overlay/linux-3.14.4/mm/: slub.c  vmalloc.c
minimal-tdi/ktdim/kernel-patch/: 0001-ktdim.patch
minimal-tdi/ktdim/linux-3.12.17/linux/arch/x86/kernel/: irq.c
minimal-tdi/ktdim/linux-3.14.4/linux/kernel/: Makefile  kthread.c
minimal-tdi/ktdim/linux-3.14.4/linux/mm/: page_alloc.c
tdi/src/: Makefile.am  Makefile.in  tdimain.c
tdidump/src/: Makefile.am  Makefile.in  tdidump.c
tdistat/src/: Makefile.am  tdistat.c
tditest/src/: Makefile.am  Makefile.in  tditest.c  tditest.cpp
tditracer/src/: FreeSans.ttf-36-509x134.c  Makefile.am  Makefile.in  bmp.c  framecapture.c  framecapture.h  framelinkedlist.c  framelinkedlist.h  gldefs.h  gles2bars.cpp  gles2bars.h  gles2capture.cpp  gles2capture.h  gles2extra.cpp  gles2extra.h  gles2spinner.cpp  gles2spinner.h  gles2text.cpp  gles2text.h  gles2util.cpp  gles2util.h  png.c  shadercapture.c  shadercapture.h  shaderlinkedlist.c  shaderlinkedlist.h  tdi.h  texturecapture.c  texturecapture.h  texturelinkedlist.c  texturelinkedlist.h  traceregl.cpp  tracerextra.cpp  tracergles2.cpp  tracerlibc.cpp  tracermain.cpp  tracermain.h  tracermq.cpp  tracerpthread.cpp  tracersem.cpp  (+4 more)
utils/: README  csv2tdi  do.sh  doit  dotdi.sh  ftrace2tdi  genwrapper  log2tdi  maddr2line  mrl2tdi  taddr2line  tdi2csv  tdiaddr  tdiaddr2  tdiaddr3  tdiallocs  tdicounter  tdicustom  tdicustom2  tdicut  tdicycle  tdifma  tdikeep  tdimark  tdimerge  tdimerge2  tdiprune  tdiqueue  tdira  tdira2  tdiremove  tdirm  tditag  tditagfromto  tst  values2tdi
utils/ttf/: FreeSans.ttf-36-509x134.c  README  Vera.ttf-36-511x135.c  ttf  ttf.cpp
